--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -4,20 +4,17 @@
 <table class="tbl table-hover"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
-	  <% if date  %>
-	    <th class="tbl_lsm"><%= sortable 'entry_ts', :Time %></th>
-	  <% else %>
-	    <th class="tbl_md"><%= sortable 'entry_ts', :Date %></th>
-	  <%end %>
+	  <th class="tbl_lsm"><%= sortable 'entry_ts', :Time %></th>
           <th class="tbl_md">Doctor</th>
 	  <th class="tbl_lsm">Visit Id</th>
 	  <th class="tbl_lmd">Patient</th>
           <th class="tbl_md">Health #</th>
           <th class="tbl_sm">Ver</th>
           <th class="tbl_lmd">Procedure(s)</th>
+          <th class="tbl_sm">Units</th>
           <th class="tbl_md">Diagnosis</th>
           <th class="tbl_xmd">Ttl. Fee</th>
-          <th class="tbl_sm">Status</th>
+          <th class="tbl_md">Status</th>
 	  <th class="tbl_md">Cab Ref#</th>
       </tr>
   </thead>
