--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,57 +1,30 @@
 
-  <h1>
-    This is the home page for the
-    <a href="<%= project_url  %>">Walk In EMR</a> project 
-  </h1>
+<h1> Welcome! </h1>
+<pre>
+We are open:
 
-  Walk-In EMR web app is no-frills electronic medical records solution created to replace now defunct, functionally similar package from Health Screen Solutions.  
-  Built using Ruby on Rails with Postgres SQL back end, Walk-In EMR is easy to use, tailored to busy walk-in clinic setting, and provides all basic functions of any EMR system including:
-  <p>
+9 AM to 8 PM, Monday through Friday
+9 AM to 1 PM, on Saturdays
+9 AM to 2 PM, Sundays & Holidays
 
-  <ul>
-   <dl>
-    <dt>Patient management</dt>
-    <dd>- You can easily add and modify patients records using many available fields. Search for patients by last name or ohip number. Generate PDF sticker for any patient in the database. Patient charts (PDF) are accessible from patient profile.</dd>
-    
-  <p>
-    <dt>Visit management</dt>
-    <dd>- Slide a card in card reader when patient walks in and you will get patient's form pre-filled with data read from the card, or existing patient profile. Card is validated in the process. Visit form (encounter) form) in PDF format is available for printing. Form is optional, generous notes data field is provided for people who prefer to enter data using computer or mobile device </dd>
-    
-  <p>
-    <dt>Day Sheet</dt>
-    <dd> This page shows current list of visits together with billing status. You can use datepicker control to select date in the past and access visits for that day</dd>
-    
-  <p>
-    <dt>Billing</dt>
-    <dd> - Once diagnosis is established and procedures are assigned, visit cand be marked as ready for billing. These visits will be shown on billing page and available for export to EDT/CSV folder. Neutral CSV and standard MCEDT formats are supported. CSV is mostly
-used with 3-rd party billing packages, while MCEDT files can be sent directly to the Ministry of Health server.</dd>
-    
-  <p>
-    <dt>Doctor management</dt>
-    <dd> - Add/delete/update doctor's records. Supports contact information, specialty, billing specifics, license info etc.  Set active flag for doctors that work in the clinic </dd>
-    
-  <p>
-    <dt>Procedures</dt>
-    <dd>  - Add/delete/update the list of more than 11000 current procedures. Set active flag for commonly used service codes to give them priority during selection. Code, price, units, description can all be updated.
-    
-  <p>
-    <dt>Diagnoses</dt>
-    <dd> - List of more than 1500 diagnoses. Add/delete/update diagnoses. </dd>
-    
-  <p>
-    <dt> Medications</dt>
-    <dd> - Provides comprehensive list of medications with specifics like dosage, strength, frequency, format etc. List can be easily customized by entering new medications.  </dd>
-    
-  <p>
-    <dt> Insurance Providers</dt>
-    <dd> - Provides long list of local insurance providers along with contact information. The list can be customized </dd>
-    
-  <p>
-    <dt> Reports</dt>
-    <dd> - Generate variety of reports based on doctor(s) and time frame selected. Save reports into database. Generate pdf reports.  </dd>
-    
-  <p>
-    <dt> Invoices</dt>
-    <dd> - Generated invoices are saved into dedicated directory and can be managed from this page </dd>
-  </dl>
-  </ul>
+Doctors’ Schedules
+
+Dr. Harpall Ubhi:
+Wednesdays 3 PM – 8 PM
+Thursdays 9 AM – 2 PM
+
+Dr. Sabira Ahmed:
+Wednesdays 9 AM – 3 PM
+
+Dr. Samarasinghe:
+Some Mondays 2 PM – 8  P
+
+Dr. Ostapenko:
+Mondays 9 AM – 2 PM
+Tuesdays 9 AM – 2 PM
+Thursdays 9 AM – 2 PM
+Sundays 9 AM – 2 PM
+
+Schedules are subject to change without notice. Please, call to confirm the hours.
+(905) 561 9255
+</pre>
