--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <h1> Welcome! </h1>
 <pre>
-We are open:
+<b>We are open:</b>
 
 9 AM to 8 PM, Monday through Friday
 9 AM to 1 PM, on Saturdays
@@ -9,22 +9,31 @@ We are open:
 
 Doctors’ Schedules
 
-Dr. Harpall Ubhi:
-Wednesdays 3 PM – 8 PM
+<b>Dr. Smith:</b>
 Thursdays 9 AM – 2 PM
 
-Dr. Sabira Ahmed:
+<b>Dr. Sabira Ahmed:</b>
 Wednesdays 9 AM – 3 PM
 
-Dr. Samarasinghe:
-Some Mondays 2 PM – 8  P
+<b>Dr. Samarasinghe:</b>
+Every second Monday 2 PM – 8 PM
+Tuesdays 9AM - 2 PM
+Friday 2 PM - 8 PM
 
-Dr. Ostapenko:
-Mondays 9 AM – 2 PM
-Tuesdays 9 AM – 2 PM
-Thursdays 9 AM – 2 PM
+<b>Dr. Nainar:</b>
+Saturdays: 9AM - 2PM
+
+<b>Dr. Sadaf Ahmed:</b>
+Fridays: 9 AM - 2PM
+Every second monday 9AM - 2PM
+
+<b>Dr. Ostapenko:</b>
+Mondays 2 PM – 8 PM / 9 AM - 2 PM (every second week)
+Tuesdays 2 PM – 8 PM
+Thursdays 2 PM – 8 PM
 Sundays 9 AM – 2 PM
+Wednesdays 3 PM – 8 PM
 
 Schedules are subject to change without notice. Please, call to confirm the hours.
-(905) 561 9255
+(905) 561-9255
 </pre>
