notes, new visit form, doctor filter

--- a/app/views/billings/_visit.html.erb
+++ b/app/views/billings/_visit.html.erb
@@ -2,9 +2,8 @@
 <% doctor = Doctor.find(visit.doc_id) %>
 <% diagnosis = Diagnosis.find_by(code: visit.diag_code) %>
 <tr>
-        <td><%= visit.entry_ts.strftime("%H:%M") %></td>
-	<td><%= link_to doctor.lname, doctor %> </td>
-	<td><%= link_to visit.id, patient_visit_path(patient,visit) %></td>
+        <td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(patient,visit) %></td>
+	<td><%= doctor.lname %> </td>
 	<td><%= link_to patient.full_name, patient %> </td>
 	<td><%= patient.ohip_num %></td>
 	<td><%= patient.ohip_ver %></td>
