--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -1,12 +1,22 @@
 <% provide(:title, 'All billing') %>
 <% date = params[:date].to_date rescue nil %>
-  
+
 <table class="tbl table-hover"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
 	  <th class="tbl_lsm"><%= sortable 'entry_ts', :Time %></th>
-          <th class="tbl_md">Doctor</th>
-	  <th class="tbl_lsm">Visit Id</th>
+          <th class="tbl_md">
+          <span class="dropdown" >
+		  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><font color="white"> Doctor <b class="caret"></b></font> </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "All", billings_path(date: params[:date]) %></li>
+	      <% @docs.each do | doc | %>
+		 <li><%= link_to doc.lname, billings_path(date: params[:date], doc_id: doc.id) %></li>
+	      <% end %>
+	    </ul>
+	  </span>
+	  </th>
+
 	  <th class="tbl_lmd">Patient</th>
           <th class="tbl_md">Health #</th>
           <th class="tbl_sm">Ver</th>
