--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -15,7 +15,18 @@
 	    <th class="tbl_md"><%= sortable 'entry_ts', :Date %></th>
 	  <%end %>
 
-          <th class="tbl_md">Doctor</th>
+	  <th class="tbl_md">
+          <span class="dropdown" >
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><font color="white"> Doctor <b class="caret"></b></font> </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "All", daysheet_path(date: params[:date]) %></li>
+              <% @docs.each do | doc | %>
+                 <li><%= link_to doc.lname, daysheet_path(date: params[:date], doc_id: doc.id) %></li>
+              <% end %>
+            </ul>
+          </span>
+          </th>
+
           <th class="tbl_lmd">Patient</th>
           <th class="tbl_lsm">Health #</th>
           <th class="tbl_sm">Ver.</th>
