bug fix with reorder; redirect for visits corrected; normal user now can delete visits

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <small>
-    The <a href="<%= project_url %>"><%= full_title %></a> project
-     <a href="project_url">Stoney Creek Walk In Clinic</a> &copy; 2017 - All rights reserved
+    The <a href="<%= project_url %>"><%= full_title %></a> project - 
+     <a href="project_url">Stoney Creek Walk In Clinic</a> &copy; 2018 - All rights reserved
   </small>
   <nav>
     <ul>
