visit save/update redirect - changed back to patient; Notes panel; billing shows previously unbilled by def; datepicker arrows added

--- a/app/views/billings/_visit.html.erb
+++ b/app/views/billings/_visit.html.erb
@@ -2,7 +2,11 @@
 <% doctor = Doctor.find(visit.doc_id) %>
 <% diagnosis = Diagnosis.find_by(code: visit.diag_code) %>
 <tr>
-        <td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(patient,visit) %></td>
+	<% if date.present? %>
+            <td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(patient,visit) %></td>
+         <% else %>
+            <td><%= link_to visit.entry_ts, patient_visit_path(patient,visit) %></td>
+         <%end %>
 	<td><%= doctor.lname %> </td>
 	<td><%= link_to patient.full_name, patient %> </td>
 	<td><%= patient.ohip_num %></td>
