--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -20,8 +20,13 @@
 	<b>Allergies</b>: <%= @patient.allergies %>
 	<b>Medications</b>: <%= @patient.medications  %>
          </pre>
+	 
+	 <div class="panel panel-info">
+	   <div class="panel-body">
+		   <b>Notes:</b> <%= @patient.notes %>
+	   </div>
+	</div>
 
-	<b>Notes</b>: <%= @patient.notes %>
     </section>
     <section class="buttons">
 	    
