middle name fixed

--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -32,7 +32,7 @@
 <div class='row'>
   <div class="col-sm-4" id="maiden_name">
   <%= f.label :'Maiden Name' %>
-  <%= f.text_field :mname %>
+  <%= f.text_field :maid_name %>
   </div>
 </div>
 
