--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -4,6 +4,12 @@
   <% doc_id = @visit.doctor.id || current_doctor.id %>
   <% @procedures = get_active_procedures %>
 
+  <% if @visit.hcp_proc_codes.present?
+        disabled = [BILLED,PAID] 
+  elsif @visit.proc_codes.empty?
+        disabled = [READY,BILLED,PAID] unless @visit.proc_codes.present? 
+  end %>
+
   <!-- Row 1 --> 
 
 <div class="row">
@@ -101,7 +107,7 @@
 <div class="row">
   <div class="col-sm-4">
   <%= f.label "Visit Status" %>
-  <%= f.select :status, VISIT_STATUSES, placeholder: 'Status' %>
+  <%= f.select :status, VISIT_STATUSES, placeholder: 'Status', disabled: disabled %>
   </div>
 
   <div class="col-sm-2">
