few bugs; middle/first name mixup; visit status dropdown; notes panel with html in patient

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -396,3 +396,13 @@ background: #FFCCFF;
     max-height: 140px;
     overflow-y: scroll;
 }
+
+.notes {
+  background-color: transparent; 
+  overflow:auto; 
+  white-space: pre-wrap; 
+  border: 0;
+  padding: 10px;
+}
+
+
