--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -33,8 +33,13 @@
 </pre>
 
 <% if @visit.notes.present? %>
+<div class="panel panel-info">
+   <div class="panel-body">
 <b>Notes </b>: <%= @visit.notes %>	     
+   </div>
+</div>
 <% end %>
+
 
 </section>
 </div>
