--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -1,7 +1,7 @@
     <tr>
 	<td><%= link_to "#{patient.full_name}", patient %> </td>
 	<td><%= patient.sex %></td> 
-	<td><%= patient.age %></td>
+	<td><%= patient.age_str %></td>
 	<td><%= patient.pat_type %> </td>
 	<td><%= "#{patient.ohip_num} #{patient.ohip_ver}" %> </td>
 	<td><%= patient.hin_expiry %> </td>
