--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
 	<% date = params[:date] || Time.now.strftime('%Y-%m-%d') %>
 	<% prevday = Date.parse(date).prev_day.strftime('%Y-%m-%d') %>
 	<% nextday = Date.parse(date).next_day.strftime('%Y-%m-%d') %>
-       <li style="width: 40px;"><%= link_to "<", params.permit(:date).merge(date: prevday )  %></li>
+       <li style="width: 40px; align:left; top: 2px;"><%= link_to '<span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>'.html_safe, params.permit(:date).merge(date: prevday )  %></li>
        <li> 
        <%= form_with  method: :get, skip_enforcing_utf8: :true  do |f| %>
 	     <div class="form-group">
@@ -23,7 +23,15 @@
 	     </div>
        <% end %>
        </li>
-       <li style="width: 40px; align:left"><%= link_to ">", params.permit(:date).merge(date: nextday )  %></li>
+       
+       <li style="width: 35px; align:left; top: 2px;">
+       <% if date.to_date < Date.today %>
+	       <%= link_to '<span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>'.html_safe, params.permit(:date).merge(date: nextday )  %>
+       <% else %>
+	       &nbsp;
+       <% end %>
+       </li>
+
 <% elsif controller_name != 'visits' && controller_name != 'users' && controller_name != 'static_pages' %>
 	<li class="nav-item active">
  	<%= form_with  method: :get, skip_enforcing_utf8: :true do |f| %>  
@@ -39,7 +47,15 @@
 <li><%= link_to "Patients", patients_path %></li>
 <li><%= link_to "Day Sheet", daysheet_path %></li>
 <li><%= link_to "Billing", billings_path %></li>
-<li><%= link_to "Reports", reports_path %></li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Documents <b class="caret"></b> </a>
+  <ul class="dropdown-menu">
+     <li><%= link_to "Reports", reports_path %></li>
+     <li> <%= link_to "Invoices", invoices_path, method: :get %> </li>
+     <li> <%= link_to "Daily Charts", daily_charts_path, method: :get %> </li>
+  </ul>
+</li>
+
 <li><%= link_to "Log out", logout_path, method: :delete %> </li>
 
   <% if  current_user.admin?  %>
@@ -57,9 +73,7 @@
          	<li> <%= link_to "Doctors", doctors_path, method: :get %> </li>
          	<li> <%= link_to "Ins. Providers", providers_path, method: :get %> </li>
          	<li> <%= link_to "Medications", drugs_path, method: :get %> </li>
-         	<li> <%= link_to "Invoices", invoices_path, method: :get %> </li>
          	<li> <%= link_to "Vaccines", vaccines_path, method: :get %> </li>
-         	<li> <%= link_to "Daily Charts", daily_charts_path, method: :get %> </li>
          	<li> <%= link_to "Export Files", export_files_path, method: :get %> </li>
             </ul>
           </li>
