--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -23,7 +23,7 @@
 	 
 	 <% if @patient.notes.present? %> 
 	 <div class="panel panel-info">
-	   <div class="panel-body">
+	   <div class="patient-notes-panel-body">
 		   <% html_str = "<pre class='notes'> #{@patient.notes} </pre>" %>
                    <%= html_str.html_safe %>
 	   </div>
