--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,2 +1,2 @@
 <h1>Invoices#show</h1>
-<p>Find me in app/views/invoices/show.html.erb</p>
+<p>Invoice file is missing - please go back to visit and regenerate </p>
