--- a/app/views/procedures/show.html.erb
+++ b/app/views/procedures/show.html.erb
@@ -26,6 +26,8 @@
 
            </pre>
     <%= button_to "Edit", edit_procedure_path(@procedure), class: "btn btn-primary", :method => "get" %>
+    <p>
+    <%= button_to "Back", procedures_path, class: "btn btn-primary", :method => "get" %>
   </div>
 </div>
 
