--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -97,11 +97,11 @@ h1 {
 }
 
 h2 {
-  font-size: 1.2em;
-  letter-spacing: -1px;
+  font-size: 1.3em;
+//  letter-spacing: -1px;
   margin-bottom: 20px;
   text-align: center;
-  font-weight: normal;
+  font-weight: bold;
 /*  color: $gray-light; */
 }
 
