--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -5,9 +5,12 @@
       <tr>
 	  <th><%= sortable 'id', 'Invoice' %> </th>
 	  <th class="tbl_lg"><%= sortable 'billto', 'Bill To' %></th>
-	  <th class="tbl_lg"><%= sortable 'pat_id', 'Patient' %></th>
+	  <th class="tbl_md"><%= sortable 'patient_id', 'Patient' %></th>
 	  <th> <%= sortable 'date' %></th>
 	  <th> <%= sortable 'amount' %></th>
+	  <th class="tbl_lg">Description</th>
+	  <th>Paid?</th>
+	  <th></th>
 	  <th></th>
       </tr>
   </thead>
@@ -18,4 +21,7 @@
   </tbody>
 </table>
 
+<div class="bottom_buttons ">
 <%= will_paginate @invoices, class: "btn" %>
+<!-- <% = button_to "New Invoice", new_invoice_path, class: "btn btn-primary col-md-12 ", method: 'get'  % > -->
+</div>
