--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -30,15 +30,24 @@
 	</div>
 	<% end %>
     </section>
-    <section class="buttons">
-    <%= button_to "New Visit", new_patient_visit_path(@patient), class:"btn btn-primary", method: 'get' %>
-    <p>
-    <%= button_to "Edit Patient", edit_patient_path(@patient), class:"btn btn-primary", method: 'get' %>
-    <p>
-    <%= button_to "Print Label", label_patient_path(@patient), class: "btn btn-primary", method: 'get' %> <!-- , data: {toggle: "modal", target: "#exampleModal"}   %> -->
 
-    </section>
+<div class="row">
+  <div id="ins_provider" class="col-sm-3">
+    <%= button_to "New Visit", new_patient_visit_path(@patient), class:"btn btn-primary", method: 'get' %>
+  </div>
+  <div id="ins_provider" class="col-sm-3">
+    <%= button_to "Edit Patient", edit_patient_path(@patient), class:"btn btn-primary", method: 'get' %>
+  </div>
+  <div id="ins_provider" class="col-sm-3">
+    <%= button_to "Print Label", label_patient_path(@patient), class: "btn btn-primary", method: 'get' %> <!-- , data: {toggle: "modal", target: "#exampleModal"}   %> -->
+  </div>
+  <div id="ins_provider" class="col-sm-3">
+    <%= button_to "Create Invoice", new_patient_invoice_path(@patient), class: "btn btn-primary", method: 'get' %> 
+  </div>
+</div>
+
   </aside>
+
   <div class="col-md-6">
     <h3>Visits: (<%= @patient.visits.count %>)</h3>
     <% if @patient.visits.any? %>
