form and label open in their own window

--- a/app/views/procedures/_procedure.html.erb
+++ b/app/views/procedures/_procedure.html.erb
@@ -1,5 +1,5 @@
      <tr>
-	<td><%= link_to "#{procedure.code}", procedure %> </td>
+	<td><%= link_to "#{procedure.code}", edit_procedure_path(procedure) %> </td>
 	<td><%= procedure.ptype %> </td> 
 	<td><%= procedure.descr %></td> 
 	<td><%= procedure.cost %></td> 
