--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -12,8 +12,8 @@
 	<td><%= visit.all_btypes_str.join',' %></td>
 	<td><%= visit.status_str %></td>
 	<% if visit.was_today? || current_user.admin? %>
-	  <td> <%= link_to "Label", label_patient_path(pat), method: 'get', target: "_blank" %> </td>
-	  <td> <%= link_to "Form", visitform_patient_visit_path(pat,visit), method: 'get', target: "_blank" %> </td>
+	  <td> <%= link_to "Label", label_patient_path(pat), method: 'get', target: "Label" %> </td>
+	  <td> <%= link_to "Form", visitform_patient_visit_path(pat,visit), method: 'get', target: "Form" %> </td>
 	  <td> <%= link_to "Edit",  edit_patient_visit_path(pat,visit) %> </td>
           <td> <%= link_to "Delete", patient_visit_path(pat,visit), method: :delete, data: { confirm: "Are you sure you want to delete visit #{visit.id} for patient #{pat.lname}?" } %> </td>
         <% else %>	
