--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -42,24 +42,24 @@
 
 <p>
 <div class="row">
- <div class="col-sm-2">
+ <div class="col-sm-3 col-md-2">
   <%= button_to "Edit Visit", edit_patient_visit_path(@patient), class: "btn btn-primary", :method => "get" %>
  </div>
- <div class="col-sm-2">
- <%= button_to "Print Visit Form", visitform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "_blank"  %>
+ <div class="col-sm-3 col-md-2">
+ <%= button_to "Print Visit Form", visitform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "Form"  %>
  </div>
- <div class="col-sm-2">
- <%= button_to "Print Referral Form", referralform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "_blank"  %>
+ <div class="col-sm-3 col-md-2">
+ <%= button_to "Print Referral Form", referralform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "Form"  %>
  </div>
 
  <% if @visit.cash? %> 
- <div class="col-sm-2">
- <%= button_to "Print Receipt", receipt_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "_blank"  %>
+ <div class="col-sm-3 col-md-2">
+ <%= button_to "Print Receipt", receipt_patient_visit_path(@patient), class: "btn btn-primary", method: 'get', formtarget: "Receipt"  %>
  </div>
  <% end %>
  
  <% if @visit.ready_to_bill? %>
- <div class="col-sm-2">
+ <div class="col-sm-3 col-md-2">
  <%= button_to "Send to Cab.md", sendclaim_patient_visit_path(@patient), class: "btn btn-primary", method: 'get'  %>
  </div>
  <% end %>
