--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -39,10 +39,10 @@
     <%= button_to "Edit Patient", edit_patient_path(@patient), class:"btn btn-primary", method: 'get' %>
   </div>
   <div id="ins_provider" class="col-sm-3">
-    <%= button_to "Print Label", label_patient_path(@patient), class: "btn btn-primary", method: 'get' %> <!-- , data: {toggle: "modal", target: "#exampleModal"}   %> -->
+    <%= button_to "Print Label", label_patient_path(@patient), class: "btn btn-primary", method: 'get', formtarget: 'Label' %> <!-- , data: {toggle: "modal", target: "#exampleModal"}   %> -->
   </div>
   <div id="ins_provider" class="col-sm-3">
-    <%= button_to "Create Invoice", new_patient_invoice_path(@patient), class: "btn btn-primary", method: 'get' %> 
+    <%= button_to "Create Invoice", new_patient_invoice_path(@patient), class: "btn btn-primary", method: 'get', formtarget: 'Form' %> 
   </div>
 </div>
 
