--- a/app/views/invoices/_invoice.html.erb
+++ b/app/views/invoices/_invoice.html.erb
@@ -4,7 +4,7 @@
 %>
 
     <tr>
-	<td><%= link_to "#{invoice.id}", invoice, target: '_blank'%> </td>
+	<td><%= link_to "#{invoice.id}", invoice %> </td>
 	<td><%= link_to provider.name, provider %> </td> 
 	<td><%= link_to patient.lname, patient %></td>
 	<td><%= invoice.date %></td> 
