--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -19,7 +19,7 @@
 	  <th>Last Visit </th>
 	  <th class="tbl_sm">Visits</th>
           <th>Phone</th>
- 	  <th >File#</th>
+ 	  <th>Addr Label</th>
       </tr>
   </thead>
   <tbody>
