--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -44,10 +44,10 @@
 	</li>
 <% end %>
 
-<li><%= link_to "Patients", patients_path %></li>
-<li><%= link_to "Day Sheet", daysheet_path %></li>
-<li><%= link_to "Billing", billings_path %></li>
-<li class="dropdown">
+<li class="<%= 'active' if controller_name == 'patients' %>"><%= link_to "Patients", patients_path %></li>
+<li class="<%= 'active' if controller_name == 'daysheet' %>"><%= link_to "Day Sheet", daysheet_path %></li>
+<li class="<%= 'active' if controller_name == 'billings' %>"><%= link_to "Billing", billings_path %></li>
+<li class="dropdown nav-item <%= 'active' if controller_name == 'reports' || controller_name == 'invoices' || controller_name == 'daily_charts' %>">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Documents <b class="caret"></b> </a>
   <ul class="dropdown-menu">
      <li><%= link_to "Reports", reports_path %></li>
@@ -59,7 +59,7 @@
 <li><%= link_to "Log out", logout_path, method: :delete %> </li>
 
   <% if  current_user.admin?  %>
-          <li class="dropdown">
+          <li class="dropdown nav-item">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Admin <b class="caret"></b>
             </a>
