--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -5,6 +5,9 @@
 
 	<div class="panel panel-default">
 		<div class="panel-body news-panel-body">
+
+			<li> Address label added to patients index page </li>
+			<li> All forms open in a separate tab called "Form"; Labels open in "Label" tab </li>
 			<li> Invoices: now attributed to patients, not visits. Go to patient profile and click on "Create Invoice" button. PDF files are stored on the server. "Invoice" billing type removed from visit form </li>
 			<li> "Reports" link in a header renamed to "Documents" drop-down. It now has 3 categories: Reports, Invoices and Daily Charts </li>
 			<li> Patient's age is now shown in months or years. Negative integer is used internally to denote age in months. Please alert me if you see negative numbers for age anywhere </li>
