daily_charts shows in Form tab

--- a/app/views/daily_charts/_daily_chart.html.erb
+++ b/app/views/daily_charts/_daily_chart.html.erb
@@ -1,5 +1,5 @@
      <tr>
-	<td><%= link_to "#{daily_chart.filename}", daily_chart, target: '_blank' %> </td>
+	<td><%= link_to "#{daily_chart.filename}", daily_chart, target: 'Form' %> </td>
 	<td><%= daily_chart.date %></td> 
 	<td><%= daily_chart.pages %> </td> 
      </tr>
