few bug fixes, FHS type added

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *
  *= require_tree .
  *= require_self
- *=bootstrap-datepicker
+ * require bootstrap-datepicker
  *= require select2
  *= require select2-bootstrap
  */
