--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -27,7 +27,7 @@
   	</div>
      <% elsif action_name == 'edit' %>
    	<div class="col-sm-6">
-  	  <%= f.label "Error message" %>
+  	  <%= f.label "Export File Reference" %>
  	  <%= f.text_field :export_file %>
   	</div>
     <% end %>
