--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -20,6 +20,7 @@
 	  <th class="tbl_sm">Visits</th>
           <th>Phone</th>
  	  <th>Addr Label</th>
+	  <%=  "<th></th>".html_safe if current_user.admin? %>
       </tr>
   </thead>
   <tbody>
