find patient revisited

--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -6,6 +6,9 @@
 	<div class="panel panel-default">
 		<div class="panel-body news-panel-body">
 
+			<li> Patient search box now supports searches by full or partial ohip number, last name[, first name], last name can now contain spaces, search by DOB: dd-mm-yyyy or dd-mmm-yyyy (abbrev string or digits for month) </li>
+			<li> Daily charts added until May 15 2006 </li>
+			<li> Merged patients records with and without ohip number </li>
 			<li> Address label added to patients index page </li>
 			<li> All forms open in a separate tab called "Form"; Labels open in "Label" tab </li>
 			<li> Invoices: now attributed to patients, not visits. Go to patient profile and click on "Create Invoice" button. PDF files are stored on the server. "Invoice" billing type removed from visit form </li>
@@ -21,7 +24,7 @@
 		</div>
 	</div>
 	
-	Please email <a href="mailto:dosta@me.com?subject=EMR staff Inquiry&cc=ostadim1@gmail.com">Dimitri</a> if you have any questions or concerns about this website. iI will typically respond within 10 min.
+	Please email <a href="mailto:dosta@me.com?subject=EMR staff Inquiry&cc=ostadim1@gmail.com">Dimitri</a> if you have any questions or concerns about this website. 
 	If there's a problem, please provide screenshot, short description and health card string swiped right into email message body.
 	 
 	Thank you!
